cilium/CiliumNetworkPolicy-allow-hubblerelay-egress-nodes.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubblerelay-egress-nodes
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
